# AI-REMOTE-PATIENT-MONITORING.

./: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  RemotePatientMonitoring  a.out  cmake_install.cmake  test.cpp
data/: config.txt  patients.csv
database/: patient_monitor.db  schema.sql
include/: AlertManager.h  AnomalyDetector.h  BoundedQueue.h  ConfigManager.h  CsvLoader.h  DashboardServer.h  DataGenerator.h  DatabaseManager.h  HealthMonitor.h  HttpServer.h  JsonConverter.h  JsonExporter.h  Logger.h  Metrics.h  PatientData.h  PerformanceMonitor.h  Severity.h  StreamSimulator.h  SystemHealth.h  ThreadSafeQueue.h  ZScoreDetector.h
logs/: alerts.txt
src/: AlertManager.cpp  AnomalyDetector.cpp  ApiServer.cpp  ConfigManager.cpp  CsvLoader.cpp  Dashboard.cpp  DashboardServer.cpp  DataGenerator.cpp  DatabaseManager.cpp  HttpServer.cpp  JsonConverter.cpp  JsonExporter.cpp  Logger.cpp  Metrics.cpp  PerformanceMonitor.cpp  StreamSimulator.cpp  SystemHealth.cpp  ZScoreDetector.cpp  main.cpp
tests/: detector_test.cpp
web/: dashboard.js  index.html
